--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
         </a>
         <a href="#booking" class="reference-box">
           <h1 class="box-title">BOOK A TABLE</h1>
-          <h3 class="box-subtitle">Delicious food delivered to your door.</h3>
+          <h3 class="box-subtitle">Select booking page to start your order.</h3>
           <img src="images/home/pizza-2.jpg">
         </a>     
       </div>        
